Make channel windowlist top position

--- a/config
+++ b/config
@@ -321,8 +321,8 @@ settings = {
     awl_maxlines = "0";
     awl_maxcolumns = "0";
     awl_mouse = "yes";
-    awl_placement = "0";
-    awl_viewer_tmux_position = "left";
+    awl_placement = "top";
+#    awl_viewer_tmux_position = "left";
     nicklist_pane_width = "25";
     autoaway_timeout = "600";
     urlinfo_title_unknown = "yes";
